# pyheom

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE.txt  Makefile  README.md  VERSION.txt  pyproject.cuda.toml  pyproject.cuda12.toml  pyproject.toml  pytest.ini  setup.py
benchmarks/: _auto.py  _core.py  conftest.py  plot_results.py  sweep.py  test_auto.py  test_bench.py
docs/: api.md  conf.py  disclaimer.md  index.md  installation.md  migration.md  quickstart.md
examples/: example.py  pyheom_example_2level_cpu.ipynb
examples/basic/: brownian_oscillator_heom.py  brownian_oscillator_redfield.py
examples/colab/: brownian_oscillator_cuda_test.ipynb  pyheom_example_2level_cpu.ipynb  pyheom_example_2level_gpu.ipynb
pyheom/: __init__.py  _auto.py  commuting_matrix.py  const.py  coo_matrix.py  heom.py  heom_solver.py  noise_decomposition.py  pade_decomposition.py  pade_spectral_decomposition.py  predefined_noise.py  pyheom.py  qme_solver.py  redfield.py  redfield_solver.py  solver_base.py  spectral_density.py  summation_over_poles.py  unit.py
scripts/: build_backend.sh  build_wheels.sh  local.env.template  run_tests.sh  test_all_backends.sh
src/: CMakeLists.txt  pylibheom.cc.j2
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_backends.py  test_brownian_2level.py  test_construction_dimensions.py  test_heom_ado.py  test_hierarchy.py  test_liouville.py  test_matrix_order.py  test_redfield_2level.py  test_redfield_lu.py  test_redfield_solvers.py  test_rkdp_degenerate_tlist.py  test_solvers.py  test_threads.py  test_unrolling.py
tests/unit/: test_auto.py  test_bath_corr_ltc.py  test_noise_decomposition.py  test_pade_decomposition.py  test_predefined_noise.py  test_summation_over_poles.py  test_unit.py
